[tool.poetry]
name = "tweet"
version = "1.3.4"
description = "Tweet Only Library"
authors = ["ganariya <ganariya2525@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Ganariya/tweet"

[tool.poetry.scripts]
tweet = "tweet.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = { extras = ["all"], version = "^0.3.2" }
python-dotenv = "^0.15.0"
python-twitter = "^3.5"
rich = "^10.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.790"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
